--- a/web_server/base.html
+++ b/web_server/base.html
@@ -2,8 +2,6 @@
 
 <head>
 
-	<!-- <link rel="shortcut icon" href="{{GLOBAL_AppTopPath}}/static/images/favicon.png" type="image/x-icon"/> -->
-
     <style type="text/css">
 
     	div#banner {
@@ -276,8 +274,6 @@
 	
 	<title>{% block page_title %}{{GLOBAL_SiteTitle}}{% endblock %}</title>
     
-    <!-- <script src="{{GLOBAL_AppTopPath}}/static/js/request.js"></script> -->
-    
     <script type="text/javascript">
         var StateColors = {
                 "initial":    "#EEE",
@@ -312,16 +308,16 @@
 <div id="main_menu">
 	<table class="placement link_menu" width="100%">
     	<tr>
-    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/P/projects">Projects</a></td>
-    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/R/index">RSEs</a></td>
-    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/R/proximity_map">CPU/RSE proximity map</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/P/projects">Projects</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/index">RSEs</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/proximity_map">CPU/RSE proximity map</a></td>
             <td><span style="color:#AAA; padding-right: 10px"><i>All times in UTC</i></span></td>
             <td style="width:100%"></td>
     		<td>
                         {% if GLOBAL_User %}
-                            <span style="color:#AAA">logged in as {{GLOBAL_User.Name or ""}}&nbsp;{{GLOBAL_User.Username}}&nbsp;</span><a class=button  href="{{GLOBAL_AppTopPath}}/A/logout?redirect={{GLOBAL_AppTopPath}}/index">log out</a>
+                            <span style="color:#AAA">logged in as {{GLOBAL_User.Name or ""}}&nbsp;{{GLOBAL_User.Username}}&nbsp;</span><a class=button  href="{{GLOBAL_PathPrefix}}/A/logout?redirect={{GLOBAL_PathPrefix}}/index">log out</a>
                         {% else %}
-                            <a class=button href="{{GLOBAL_AppTopPath}}/A/login?redirect={{GLOBAL_AppTopPath}}/index">log in</a>
+                            <a class=button href="{{GLOBAL_PathPrefix}}/A/login?redirect={{GLOBAL_PathPrefix}}/index">log in</a>
                         {% endif %}
     		</td>
     	</tr>
