--- a/web_server/login.html
+++ b/web_server/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block html_head %}
-    <script src="{{GLOBAL_AppTopPath}}/static/js/password_hash.js"></script>
+    <script src="{{GLOBAL_PathPrefix}}/static/js/password_hash.js"></script>
 {% endblock %}
 
 {% block headline %}Log in{% endblock %}
