--- a/web_server/project.html
+++ b/web_server/project.html
@@ -128,8 +128,8 @@
     </script>
     
     <script>
-        const closed_log_arrow = "{{GLOBAL_AppTopPath}}/static/arrow-right.gif";
-        const open_log_arrow = "{{GLOBAL_AppTopPath}}/static/arrow-down.gif";
+        const closed_log_arrow = "{{GLOBAL_PathPrefix}}/static/arrow-right.gif";
+        const open_log_arrow = "{{GLOBAL_PathPrefix}}/static/arrow-down.gif";
     </script>
 
     <tr>    
