--- a/web_server/project.html
+++ b/web_server/project.html
@@ -25,7 +25,7 @@
     <tr>    <th>Status</th>             <td><span class="{{project.State}}" style="padding: 3px">{{project.State}}</span></td> </tr>
     <tr>    <th>Query</th>              <td><pre>{{project.Query or ""}}</pre></td>
             {% if project.Query or False and not GLOBAL_MetaCatURL is none %}
-                <td><a href="{{GLOBAL_MetaCatURL}}/gui/query?query={{project.quoted_query()}}">run query</a></td>
+                <td><a href="{{GLOBAL_MetaCatURL}}/gui/query?query={{project.quoted_query()}}&run=yes">run query</a></td>
             {% endif %}
     </tr>
     <tr>    <th>Project attributes</th>         <td class="nopadding">
