--- a/demo/DataDispatcherDemo.slides.html
+++ b/demo/DataDispatcherDemo.slides.html
@@ -14677,7 +14677,7 @@ div.jp-OutputPrompt {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Objective">Objective<a class="anchor-link" href="#Objective">&#182;</a></h1><ul>
+<h1 id="Demo-Use-Case">Demo Use Case<a class="anchor-link" href="#Demo-Use-Case">&#182;</a></h1><ul>
 <li>Verify checksums and sizes for a set of files seleted by an MQL query</li>
 <li>Option to choose adler32 or crc32 checksum<ul>
 <li>to demo project parametrization</li>
@@ -14867,9 +14867,9 @@ $ python json_extract.py info.json params/size
 </li>
 </ul>
 </li>
-<li>download the file using URL received from DD</li>
+<li>download the file using the URL received from DD</li>
 <li>calculate the checksum of the requested type -- <em>use checksum.py</em></li>
-<li>compare calculated checksum and file size to the file metadata received from DD -- <em>use json_exstract.py</em></li>
+<li>compare calculated checksum and file size to the file metadata received from DD</li>
 <li>print results</li>
 </ol>
 </li>
